fix: navbar menu items color on IOS

--- a/src/components/header/dimensions/tablet/TabletView.scss
+++ b/src/components/header/dimensions/tablet/TabletView.scss
@@ -362,6 +362,9 @@
           img {
             margin-right: 8px;
           }
+          span:not(.tooltiptext) {
+            color: $black;
+          }
         }
         @include lg {
           grid-row-gap: 40px;
